Replaced the valueOf methods on the primitive wrappers